<resources>
    <string name="app_name">Jon_Curtis_eventTracker</string>
    <string name="event_tracker">Event Tracker</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="bell">bell</string>
    <string name="lower_username">     username</string>
    <string name="lower_password">     password</string>
    <string name="add">add</string>
    <string name="time">Time</string>
    <string name="phone_number">Phone Number</string>
    <string name="event_name">  Event Name</string>
    <string name="_10_30am">  10:30am</string>
    <string name="dd_mm_yyyy">  DD/MM/YYYY</string>
    <string name="_000_000_0000">   (000)000–0000</string>
    <string name="update">Update</string>
    <string name="event_details"> Event Details</string>
    <string name="enable_sms">Enable SMS</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="enable_alarm">Enable Alarm</string>
    <string name="alarm">Alarm</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="ok">Ok</string>
    <string name="sms">SMS</string>
    <string name="send">Send</string>
</resources>