<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8FE4E4"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="111dp"
            android:layout_height="53dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/event_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:hint="@string/event_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
        </TableRow>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/event_details"
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/event_details"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/perm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1D3751"
                android:text="@string/sms" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="59dp">

            <View
                android:id="@+id/view5"
                android:layout_width="40dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/set_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1D3751"
                android:text="@string/date"
                app:icon="@android:drawable/ic_menu_month"
                app:iconTint="#FFFFFF" />

            <View
                android:id="@+id/view6"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/set_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1D3751"
                android:text="@string/time"
                app:icon="@android:drawable/ic_lock_idle_alarm" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="76dp">

            <View
                android:layout_width="278dp"
                android:layout_height="53dp" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#1D3751"
                android:text="@string/add" />
        </TableRow>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>