<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view3"
                android:layout_width="111dp"
                android:layout_height="53dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view4"
                android:layout_width="111dp"
                android:layout_height="98dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="98dp"
                    android:contentDescription="@string/bell"
                    app:srcCompat="@android:drawable/ic_popup_reminder"
                    app:tint="#C51616"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="111dp"
                android:layout_height="28dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="29dp">

            <View
                android:layout_width="111dp"
                android:layout_height="39dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:text="@string/event_tracker"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#05238F" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="67dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#020202" />

            <EditText
                android:id="@+id/username"
                android:layout_width="262dp"
                android:layout_height="73dp"
                android:autofillHints="@string/username"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:hint="@string/lower_username"
                android:inputType="textPersonName"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="99dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#070707" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:autofillHints=""
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:hint="@string/lower_password"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#020202" />

            <EditText
                android:id="@+id/repassword"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:hint="@string/lower_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="111dp"
                android:layout_height="53dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="53dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#295563"
                    android:text="@string/register" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>